depricate sql engine

--- a/README.ipynb
+++ b/README.ipynb
@@ -7,6 +7,26 @@
    "source": [
     "## document is not ready yet"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c072b3f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlpd import DataBase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "410c89a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with DataBase('')"
+   ]
   }
  ],
  "metadata": {
