--- a/README.ipynb
+++ b/README.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c072b3f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlpd import DataBase"
+    "from msqlpd import DataBase"
    ]
   },
   {
